# arkkvm-usb-mic

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES  about.toml  build.rs  build.sh
crates/rockchip_mpi_sys/: Cargo.toml  build.rs  wrapper.h
crates/rockchip_mpi_sys/src/: lib.rs
cshim/: getauxval.c
src/: lib.rs  main.rs  zenoh_bus.rs
src/usb/: mic.rs  mic_c.rs  mic_sub.rs  mod.rs
